traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:12: error: reassignment to val
        endroit = !endroit
                ^TraversalZigZag:19: error: reassignment to val
        endroit = !endroit
                ^